# impl-enum

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/: as_dyn.rs  with_methods.rs
src/: as_dyn.rs  as_ref.rs  lib.rs  with_methods.rs
tests/: as_dyn.rs  as_ref.rs  generics.rs  simple.rs  test.rs  with_methods_generic.rs  with_methods_simple.rs
