[package]
name = "impl-enum"
version = "0.3.0"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
rust-version = "1.56"
description = "Macro for generating methods on an enum that match on the enum and call the same method on each variant."
readme = "README.md"
repository = "https://github.com/Heliozoa/impl-enum"
license = "MPL-2.0"
keywords = ["macro", "enum", "methods"]
categories = ["rust-patterns"]
resolver = "2"

[lib]
proc-macro = true

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.43"
syn = { version = "1.0.99", features = ["full"] }
quote = "1.0.21"
