[package]
name = "impl-enum"
version = "0.3.1"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
rust-version = "1.56"
description = "Macros that make using enums like trait objects more convenient."
readme = "README.md"
repository = "https://github.com/Heliozoa/impl-enum"
license = "MPL-2.0"
keywords = ["macro", "enum", "methods"]
categories = ["rust-patterns"]
resolver = "2"

[lib]
proc-macro = true

[features]
default = ["with_methods", "as_dyn"]
with_methods = []
as_dyn = []

[[example]]
name = "as_dyn"
path = "examples/as_dyn.rs"
required-features = ["as_dyn"]

[[example]]
name = "with_methods"
path = "examples/with_methods.rs"
required-features = ["with_methods"]

[dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.43"
# full: using types like syn::Signature
syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.21"
